install modules into platform-specific pyexecdir instead of pythondir

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,6 +12,6 @@ CLEANFILES	= revelation
 
 revelation: revelation.in
 	sed \
-		-e "s|\@pythondir\@|$(pythondir)|" \
+		-e "s|\@pyexecdir\@|$(pyexecdir)|" \
 		revelation.in > revelation
 
