attempted wrap of panel_applet_request_focus()

--- a/src/wrap/gnomemisc/Makefile.am
+++ b/src/wrap/gnomemisc/Makefile.am
@@ -9,8 +9,8 @@ module_PROGRAMS	= gnomemisc.so
 moduledir	= $(pyexecdir)/revelation
 CLEANFILES	= gnomemisc.c
 
-AM_LDFLAGS	= `pkg-config --libs gtk+-2.0 pygtk-2.0 libgnomeui-2.0 gnome-vfs-2.0 gnome-keyring-1`
-AM_CFLAGS	= `pkg-config --cflags gtk+-2.0 pygtk-2.0 libgnomeui-2.0 gnome-vfs-2.0 gnome-keyring-1` -fPIC -I${PYTHON_INCLUDE} -I.
+AM_LDFLAGS	= `pkg-config --libs gtk+-2.0 pygtk-2.0 libgnomeui-2.0 gnome-vfs-2.0 gnome-keyring-1 libpanelapplet-2.0`
+AM_CFLAGS	= `pkg-config --cflags gtk+-2.0 pygtk-2.0 libgnomeui-2.0 gnome-vfs-2.0 gnome-keyring-1 libpanelapplet-2.0` -fPIC -I${PYTHON_INCLUDE} -I.
 
 
 gnomemisc.c: gnomemisc.defs gnomemisc.override
