remove GNOME_RevelationApplet.server during make clean

--- a/data/bonobo/Makefile.am
+++ b/data/bonobo/Makefile.am
@@ -7,6 +7,7 @@
 
 serverdir	= $(libdir)/bonobo/servers
 server_DATA	= GNOME_RevelationApplet.server
+CLEANFILES	= GNOME_RevelationApplet.server
 
 GNOME_RevelationApplet.server: GNOME_RevelationApplet.server.in
 	sed \
