use make dist to build releases

--- a/data/cracklib/Makefile.am
+++ b/data/cracklib/Makefile.am
@@ -8,6 +8,7 @@
 dictdir		= $(datadir)/revelation
 dict_DATA	= pwdict.hwm pwdict.pwd pwdict.pwi
 CLEANFILES	= pwdict.hwm pwdict.pwd pwdict.pwi
+EXTRA_DIST	= pwdict
 
 
 pwdict.hwm pwdict.pwd pwdict.pwi: pwdict
