--- a/data/icons/48x48/Makefile.am
+++ b/data/icons/48x48/Makefile.am
@@ -5,9 +5,9 @@
 # $Id$
 #
 
-appicondir	= $(datadir)/icons/hicolor/48x48/apps
-appicon_DATA	= revelation.png revelation-locked.png
+appicondir		= $(datadir)/icons/hicolor/48x48/apps
+dist_appicon_DATA	= revelation.png revelation-locked.png
 
-mimeicondir	= $(datadir)/icons/hicolor/48x48/mimetypes
-mimeicon_DATA	= gnome-mime-application-x-revelation.png
+mimeicondir		= $(datadir)/icons/hicolor/48x48/mimetypes
+dist_mimeicon_DATA	= gnome-mime-application-x-revelation.png
 
