--- a/data/icons/scalable/Makefile.am
+++ b/data/icons/scalable/Makefile.am
@@ -5,6 +5,6 @@
 # $Id$
 #
 
-fsicondir	= $(datadir)/icons/hicolor/scalable/filesystems
-fsicon_DATA	= revelation-fallback-folder.svg revelation-fallback-folder-open.svg
+fsicondir		= $(datadir)/icons/hicolor/scalable/filesystems
+dist_fsicon_DATA	= revelation-fallback-folder.svg revelation-fallback-folder-open.svg
 
