--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,6 +8,7 @@
 SUBDIRS		= lib wrap
 bin_SCRIPTS	= revelation
 libexec_SCRIPTS	= revelation-applet
+EXTRA_DIST	= revelation.in revelation-applet.in
 CLEANFILES	= revelation revelation-applet
 
 
