--- a/data/icons/16x16/Makefile.am
+++ b/data/icons/16x16/Makefile.am
@@ -5,6 +5,6 @@
 # $Id$
 #
 
-appicondir	= $(datadir)/icons/hicolor/16x16/apps
-appicon_DATA	= revelation.png
+appicondir		= $(datadir)/icons/hicolor/16x16/apps
+dist_appicon_DATA	= revelation.png
 
