generate ChangeLog from subversion log during make dist

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,3 +8,12 @@
 AUTOMAKE_OPTIONS	= dist-bzip2 no-dist-gzip
 SUBDIRS			= data src
 
+dist-hook:
+	svn2cl.sh\
+		--authors=$(top_srcdir)/authors.xml \
+		--group-by-day \
+		--separate-daylogs \
+		--include-rev \
+		--file=$(top_distdir)/ChangeLog \
+		https://oss.codepoet.no/svn/revelation/tags/$(PACKAGE)-$(VERSION)
+
