--- a/src/lib/Makefile.am
+++ b/src/lib/Makefile.am
@@ -26,6 +26,7 @@ EXTRA_DIST			= config.py.in
 config.py: config.py.in
 	sed \
 		-e "s|\@GCONFTOOL\@|$(GCONFTOOL)|" \
+		-e "s|\@PACKAGE\@|$(PACKAGE)|" \
 		-e "s|\@VERSION\@|$(VERSION)|" \
 		-e "s|\@datadir\@|$(datadir)|" \
 		-e "s|\@pkgdatadir\@|$(pkgdatadir)|" \
